--- a/hybridOfActiTimeProject/test-output/old/Suite/classes.html
+++ b/hybridOfActiTimeProject/test-output/old/Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.testcase.TC_01_SHPSTK_LOGIN</td>
+<td>testPackage.EndToEndFlow</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyUserShouldBeAbleToLogin</td>
+<td>validTestCase</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
