--- a/e-CommerceHybrid/test-output/old/Default suite/methods.html
+++ b/e-CommerceHybrid/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dda9cc">  <td>23/06/06 23:02:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_SHPSTK_LOGIN.VerifyUserShouldBeAbleToLogin()[pri:0, instance:com.testcase.TC_01_SHPSTK_LOGIN@55182842]">VerifyUserShouldBeAbleToLogin</td> 
-  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="9ee3a2">  <td>23/06/06 23:02:19</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.testcase.TC_01_SHPSTK_LOGIN@55182842]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/06/14 20:52:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.testcase.TC_01_SHPSTK_LOGIN@55b699ef]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b58bd3">  <td>23/06/14 20:52:03</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_SHPSTK_LOGIN.VerifyUserShouldBeAbleToLogin()[pri:0, instance:com.testcase.TC_01_SHPSTK_LOGIN@55b699ef]">VerifyUserShouldBeAbleToLogin</td> 
+  <td>main@294658058</td>   <td></td> </tr>
 </table>
